--- a/simplefoc09_stm32f103_adc_sample/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
+++ b/simplefoc09_stm32f103_adc_sample/MDK-ARM/simplefoc_stm32f103/simplefoc_stm32f103.build_log.htm
@@ -26,47 +26,49 @@ Project File Date:  01/21/2025
 
 <h2>Output:</h2>
 *** Using Compiler 'V6.21', folder: 'C:\Keil_v5\ARM\ARMCLANG\Bin'
-Build target 'simplefoc_stm32f103'
+Rebuild target 'simplefoc_stm32f103'
 compiling gpio.c...
+compiling stm32f1xx_it.c...
 compiling i2c.c...
+compiling adc.c...
 compiling main.c...
 compiling tim.c...
-compiling stm32f1xx_it.c...
-compiling adc.c...
+assembling startup_stm32f103xb.s...
 compiling stm32f1xx_hal_msp.c...
 compiling stm32f1xx_hal_gpio_ex.c...
-compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal.c...
+compiling stm32f1xx_hal_rcc_ex.c...
 compiling stm32f1xx_hal_adc_ex.c...
-compiling stm32f1xx_hal_gpio.c...
-compiling stm32f1xx_hal_rcc.c...
 compiling stm32f1xx_hal_adc.c...
-compiling stm32f1xx_hal_cortex.c...
-compiling stm32f1xx_hal_pwr.c...
-compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_rcc.c...
+compiling stm32f1xx_hal_gpio.c...
 compiling stm32f1xx_hal_dma.c...
-compiling stm32f1xx_hal_flash_ex.c...
+compiling stm32f1xx_hal_cortex.c...
+compiling stm32f1xx_hal_flash.c...
+compiling stm32f1xx_hal_pwr.c...
 compiling stm32f1xx_hal_exti.c...
+compiling stm32f1xx_hal_flash_ex.c...
 compiling system_stm32f1xx.c...
 compiling SEGGER_RTT_printf.c...
 compiling stm32f1xx_hal_tim_ex.c...
+assembling SEGGER_RTT_ASM_ARMv7M.S...
 compiling SEGGER_RTT.c...
-compiling foc_utils.cpp...
 compiling stm32f1xx_hal_tim.c...
 compiling stm32f1xx_hal_i2c.c...
-compiling lowpass_filter.cpp...
+compiling foc_utils.cpp...
 compiling pid.cpp...
+compiling lowpass_filter.cpp...
 compiling time_utils.cpp...
 compiling CurrentSense.cpp...
-compiling Sensor.cpp...
 compiling FOCMotor.cpp...
+compiling Sensor.cpp...
 compiling AS5600_I2C.cpp...
 compiling BLDCDriver3PWM.cpp...
 compiling InlineCurrentSense.cpp...
+compiling user_main.cpp...
 compiling dwt_timer.c...
 compiling bsp_pwm.c...
 compiling BLDCMotor.cpp...
-compiling user_main.cpp...
 linking...
 Program Size: Code=35184 RO-data=976 RW-data=248 ZI-data=5864  
 FromELF: creating hex file...
